--- a/src/web/public/view/index.html
+++ b/src/web/public/view/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="css/main.css">
-    <script src="js/main.js"></script>
 </head>
 <body>
-    <h1>Page index.html</h1>
+    <!-- <h1>Page index.html</h1> -->
+    <div id='app'></div>
+    <script src="js/index.js"></script>
 </body>
 </html>
