--- a/src/web/public/css/main.css
+++ b/src/web/public/css/main.css
@@ -1,3 +1,19 @@
 h1 {
     color: blue;
 }
+
+html, body {
+    height: 100%;
+}
+
+body {
+    margin: 0;
+}
+
+* {
+    box-sizing: border-box;
+}
+
+#app {
+    height: 100%;
+}
