--- a/src/web/private/cs/app.css
+++ b/src/web/private/cs/app.css
@@ -21,6 +21,7 @@ body {
 
 .general-login {
     background-image: url(/assets/fifaTeste.jpg);
+    background-size: cover;
     height: 100%;
     display: flex;
     align-items: center;
