--- a/src/web/private/cs/playersTable.css
+++ b/src/web/private/cs/playersTable.css
@@ -27,7 +27,7 @@
     display: flex;
     align-items: center;
     justify-content: left;
-    cursor: context-menu;
+    cursor: default;
 }
 
 .column-playe{
@@ -43,7 +43,6 @@
     display: flex;
     align-items: center;
     justify-content: left;
-    cursor: context-menu;
     padding: 5px;
     font-family: monospace;
     font-size: 17px;
@@ -62,10 +61,27 @@
     display: flex;
     flex-direction: column;
     position: relative;
+    border-bottom: 1px solid #3eb9d8;
 }
 
 .top-line-body {
     display: flex;
+    cursor: pointer;
+    position: relative;
+    height: 75px;
+}
+
+.icon {
+    position: absolute;
+    right: 20px;
+    font-size: 19px!important;
+    top: 20px;
+    transform: rotate(180deg);
+    transition: .5s;
+}
+.active .icon {
+    transform: rotate(0deg);
+    top: 25px;
 }
 .variation{
     margin-left: auto;
@@ -91,8 +107,17 @@
 }
 
 .chart-space {
-    height: 0;
+    height: 0px;
     padding: 0!important;
+    overflow: hidden;
+    transition: .5s;
+}
+
+.active .chart-space {
+    height: 350px;
+}
+.chart-object {
+    height: 100%;
 }
 @media(max-width: 650px){
     .table-header>div>div,
