--- a/src/web/private/cs/app.css
+++ b/src/web/private/cs/app.css
@@ -18,6 +18,8 @@ body {
 #app {
     height: 100%;
     flex: 1;
+    background-color: #34363a;
+    overflow: auto;
 }
 
 .general-login {
@@ -64,7 +66,7 @@ h1 {
   font-family: "Roboto", sans-serif;
   text-transform: uppercase;
   outline: 0;
-  background: #3db3d7;
+  background: #823eef;
   width: 100%;
   border: 0;
   padding: 15px;
@@ -77,7 +79,7 @@ h1 {
 .form button:hover,
 .form button:active,
 .form button:focus {
-  background: #35a8c9;
+  background: #6131ad;
 }
 .form .message {
   margin: 15px 0 0;
@@ -85,7 +87,7 @@ h1 {
   font-size: 12px;
 }
 .form .message a {
-  color: #3db3d7;
+  color: #823eef;
   text-decoration: none;
 }
 .form .register-form {
