--- a/src/web/private/cs/navigation.css
+++ b/src/web/private/cs/navigation.css
@@ -1,11 +1,12 @@
 .navigation {
-    background-color: #3eb9d8;
+    background-color: #212025;
     display: flex;
     align-items: center;
     justify-content: center;
     height: 50px;
     font-family: monospace;
     font-size: 19px;
+    position: relative;
 }
 
 .navigation a {
@@ -18,4 +19,21 @@
 
 .navigation>a.selected {
     color: white;
+}
+
+.logout {
+    position: absolute;
+    right: 10px;
+    border-radius: 10px;
+    height: 50px;
+}
+.logout:hover {
+    background-color: rgb(61, 58, 58);
+
+}
+.logout img {
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
+    transform: rotate(180deg);
 }
