--- a/src/web/private/cs/app.css
+++ b/src/web/private/cs/app.css
@@ -20,6 +20,7 @@ body {
     flex: 1;
     background-color: #34363a;
     overflow: auto;
+    position: relative;
 }
 
 .general-login {
@@ -31,6 +32,25 @@ body {
     justify-content: center;
 }
 
+.console-options {
+  position: absolute;
+  display: flex;
+  right: 5%;
+  top: 96px;
+  width: 180px;
+  justify-content: space-between;
+}
+
+.console-options>div,
+.console-options>div>img {
+  width: 50px;
+  height: 50px;
+  cursor: pointer;
+}
+
+.ps4-option {
+  background-image: url('/src/web/public/assets/ps4.png')
+}
 h1 {
     margin: 0;
 }
