--- a/src/web/private/cs/navigation.css
+++ b/src/web/private/cs/navigation.css
@@ -9,16 +9,19 @@
     position: relative;
 }
 
-.navigation a {
+.navigation>a {
     text-transform: none;
     text-decoration: none;
     padding: 8px;
     color: rgb(251, 233, 255);
     font-weight: 560;
+    transition: .5s;
 }
 
 .navigation>a.selected {
     color: white;
+    background-color: #663ab5;
+    border-radius: 13px;
 }
 
 .logout {
