--- a/src/web/private/cs/app.css
+++ b/src/web/private/cs/app.css
@@ -114,4 +114,10 @@ h1 {
   display: none;
 }
 
+.loader {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  height: 450px;
+}
 
