--- a/src/web/private/cs/app.css
+++ b/src/web/private/cs/app.css
@@ -121,3 +121,13 @@ h1 {
   height: 450px;
 }
 
+.no-data-found {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  height: 450px;
+  color: white;
+  font-family: monospace;
+  font-size: 24px;
+}
+
