--- a/src/web/private/cs/app.css
+++ b/src/web/private/cs/app.css
@@ -114,11 +114,25 @@ h1 {
   display: none;
 }
 
-.loader {
+.loader,
+.chart-loader {
   align-items: center;
   display: flex;
   justify-content: center;
   height: 450px;
+}
+
+.chart-space {
+  position: relative;
+}
+
+.chart-loader {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: #34363a;
 }
 
 .no-data-found {
