--- a/src/web/private/cs/app.css
+++ b/src/web/private/cs/app.css
@@ -46,6 +46,20 @@ body {
   width: 50px;
   height: 50px;
   cursor: pointer;
+  padding: 10px 5px;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  border-radius: 10px;
+  transition: .3s;
+}
+.console-options .active {
+  background-color: #6131ad;
+}
+
+.console-options>div>img {
+  padding: 0;
+  height: 40px;
 }
 
 .ps4-option {
@@ -153,3 +167,6 @@ h1 {
   color: green;
 }
 
+*{
+  box-sizing: border-box;
+}
