--- a/src/web/private/cs/app.css
+++ b/src/web/private/cs/app.css
@@ -16,7 +16,7 @@ body {
 }
 
 #app {
-    height: 100%;
+    /* height: 100%; */
     flex: 1;
     background-color: #34363a;
     overflow: auto;
@@ -167,10 +167,45 @@ h1 {
   color: green;
 }
 
+.top-line-body>.green-variation>.arrow-icon {
+  margin-top: 5px;
+}
+
 .red-variation .arrow-icon{
     transform: rotate(180deg);
+    margin-top: 0;
+    padding-left: 0;
+    padding-right: 5px;
+    margin-bottom: 5px;
+}
+
+.table-line-body>div>.column-number>span {
+  padding-left: 0;
 }
 
 *{
   box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
+}
+
+.linha-show-more {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 50px;
+  margin: 25px 0;
+}
+
+.show-more-data-btn {
+  color: white;
+  border: 1px solid #6131ad;
+  padding: 10px;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: .3s;
+}
+
+.show-more-data-btn:hover {
+  background-color: #6131ad;
 }
