--- a/src/web/private/cs/app.css
+++ b/src/web/private/cs/app.css
@@ -60,6 +60,7 @@ body {
 .console-options>div>img {
   padding: 0;
   height: 40px;
+  width: 50px;
 }
 
 .ps4-option {
@@ -136,6 +137,15 @@ h1 {
   height: 450px;
 }
 
+.loader-btn-show {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  height: 60px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
 .chart-space {
   position: relative;
 }
@@ -164,7 +174,7 @@ h1 {
 }
 
 .top-line-body>.green-variation {
-  color: green;
+  color: #93dc93;
 }
 
 .top-line-body>.green-variation>.arrow-icon {
@@ -193,7 +203,7 @@ h1 {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 50px;
+  height: 60px;
   margin: 25px 0;
 }
 
