tabela carteira pronta

--- a/src/web/private/cs/app.css
+++ b/src/web/private/cs/app.css
@@ -24,7 +24,7 @@ body {
 }
 
 .general-login {
-    background-image: url(/assets/fifaTeste.jpg);
+    background-image: url(/assets/fifaTeste.jpeg);
     background-size: cover;
     height: 100%;
     display: flex;
