--- a/src/web/private/cs/login.css
+++ b/src/web/private/cs/login.css
@@ -4,7 +4,7 @@ h1 {
 
 .modalAlert{
     width: 270px;
-    background-color: #fff;
+    background-color: white;
     height: 186px;
     position: absolute;
     z-index: 2;
@@ -18,6 +18,7 @@ h1 {
 .textHeadModal{
     text-align: center;
     font-size: 20px;
+    color: #663ab5;
 }
 
 .iconHead{
@@ -42,5 +43,5 @@ h1 {
 }
 
 .loading{
-    color: blue;
+    color: #663ab5;
 }
